tdf#152200: tolerate begin/end fldChar context mismatch

We generate such files currently. Fixing that will be another commit.

Change-Id: I788501e346cba63c08a767c0e05e063bc1172089
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143223
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>